    option was added to tweak when heap growth should occur.

- Compiler
  - Avoid re-using argvector when inline rest operations are being
    used in CPS calls (#1703, thanks to Jakob L. Keuze).
  - An `emit-types-file` declaration has been added, which corresponds
    to the compiler flag of the same name (#1644, thanks to Marco Maggi
    for the suggestion).

- Build system
  - Auto-configure at build time on most platforms. Cross-compilation
    still requires PLATFORM to be set, and it can still be provided
    manually, but it is no longer required in the common case.

- Tools
  - Fixed a bug in chicken-install (#1744) that would cause
    `Error: (string->number) bad argument type: #!eof` in some cases.
  - If chicken-install has a program prefix/suffix, it now writes to a
    cache directory matching its program name (#1713, thanks to Alice Maz)
  - Fixed bug in chicken-install regarding variable quotation on UNIX-like
    systems which prevented installation into paths with spaces (#1685).

5.2.0

- Core libraries
  - Fix `memory-statistics` by returning semi-space bytes and used
    semi-space bytes like the documentation says. Old implementation
    returned full-heap size and (full-heap - used-semi-space).
  - for-each and map now behave consistently in compiled and interpreted
    mode, like in SRFI-1.  They now stop when the shortest list is
    exhausted instead of raising an exception (fixes #1422).
  - There is now a srfi-88 module which contains just the three
    procedures from the (chicken keyword) module defined by the SRFI.
  - A feature identifier named "srfi-88" is now registered.
  - The procedures `record-printer` and `set-record-printer!` and a
    corresponding SRFI-17 setter have been added. These deprecate
    `define-record-printer` which isn't a "real" definition (see #1294).
  - On Windows, `decompose-directory` no longer crashes when a drive
    letter is present in the supplied path string.